adding links for the book/slides/irc

--- a/discussion.html
+++ b/discussion.html
@@ -41,8 +41,17 @@
       <div class="row">
           <p>
                 <ul>
-                    <li>Join Us On #freenode</li>
-                    <li>Stack Overflow</li>
+                    <li>
+                      <a href="http://webchat.freenode.net/?channels=%23InnerSource">Join Us On #freenode</a><div class="box">
+                      <iframe src="http://webchat.freenode.net/?channels=%23InnerSource" width="70%" height="400"></iframe></div><br/></li>
+                    <li>Quora</li>
+                    <li>
+                      <a href="http://www.inner-sourcing.com/wiki/wiki/">Wiki</a><div class="box"><iframe src="http://www.inner-sourcing.com/wiki/wiki/" width = "70%" height = "400"></iframe></div> <br/>
+                    </li>
+                    <li>
+                      <a href="#">InnerSource at PayPal</a><br/>
+                      <object width="70%" height="400" data="AntiSilo-OSCON-US-2015.pdf"></object>
+                    </li>
                 </ul>
           </p>
       </div>
