--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -39,16 +39,9 @@
         </div>
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
       <div class="row">
-        <p align="center">
-        <img align="center" src="img/InnerSourceLogo.svg"></img>
-        </p>
         
-        <h1 align="center">
-        <small>
-        InnerSource takes the lessons learned from developing open source software and applies them to the way companies develop software internally. As developers have become accustomed to working on world class open source software, there is a strong desire to bring those practices back inside the firewall and apply them to software that companies may be reluctant to release. For companies building mostly closed source software, InnerSource can be a great tool to help break down silos, encourage internal collaboration, accelerate new engineer on-boarding, and identify opportunities to contribute software back to the open source world.
-        </small>
-        </h1>
-        
+        <a href="http://www.oreilly.com/programming/free/getting-started-with-innersource.csp">Getting Started with InnerSource</a><div class="box"><iframe src="http://www.oreilly.com/programming/free/getting-started-with-innersource.csp" width = "70%" height = "400"></iframe></div> <br/>
+
       </div>
     </div>
   </div>
