--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
+        <p align="center">
+            <img align="center" src="img/InnerSourceLogo.svg"></img>
+        </p>
         <h1>InnerSource Commons</h1>
         <p>The Journey Is The Reward</p>
 
@@ -22,8 +25,6 @@
 
 
         <ul>
-          <li><a href="https://github.com/paypal/InnerSourceCommons/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/paypal/InnerSourceCommons/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/paypal/InnerSourceCommons">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
