Remove extra text showing repo location

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>InnerSource Commons</h1>
         <p>The Journey Is The Reward</p>
 
-        <p class="view"><a href="https://github.com/paypal/InnerSourceCommons">View the Project on GitHub <small>paypal/InnerSourceCommons</small></a></p>
+        <p class="view"><a href="https://github.com/paypal/InnerSourceCommons">View the Project on GitHub</a></p>
 
 
         <ul>
