--- a/contribute.html
+++ b/contribute.html
@@ -30,7 +30,7 @@
       </header>
       <section>
           <p>
-              If you've got a story about how InnerSource has worked inside your own company, we'd love to hear from you. Submit a Pull Request that adds your Case Study to the collection.
+              If you've got a story about how InnerSource has worked inside your own company, we'd love to hear from you. Because we are hosting InnerSource Commons on using GitHub Pages, you can <a href="https://github.com/paypal/InnerSourceCommons/tree/gh-pages">submit a Pull Request to these pages</a> that adds your Case Study to the collection.
           </p>
 
       </section>
