--- a/whatisis.html
+++ b/whatisis.html
@@ -29,7 +29,20 @@
         </ul>
       </header>
       <section>
-        <p>InnerSource takes the lessons learned from developing open source software and applies them to the way companies develop software internally. As developers have become accustomed to working on world class open source software, there is a strong desire to bring those practices back inside the firewall and apply them to software that companies may be reluctant to release. For companies building mostly closed source software, InnerSource can be a great tool to help break down silos, encourage internal collaboration, accelerate new engineer on-boarding, and identify opportunities to contribute software back to the open source world.</p>
+        <p>"Inspired by the spread of open source software throughout the areas of operating systems, cloud computing, JavaScript frameworks, and elsewhere, a number of companies are mimicking the practices of the powerful open source movement to create an internal company collaboration under the rubric InnerSource. In these pages you’ll read about the experience of the leading Internet commerce facilitator PayPal, and see how inner source can benefit engineers, management, and marketing/PR departments.</p>
+
+<p>"To understand the appeal of InnerSource project management, consider what has made open source software development so successful: 
+<ul>
+    <li>Programmers share their work with a wide audience, instead of just with a manager or team. In most open source projects, anyone in the world is free to view the code, comment on it, learn new skills by examining it, and submit changes that they think will improve it or customize it to their needs.</li>
+<li>New code repositories (branches) based on the project can be made freely, so that sites with unanticipated uses for the code can adapt it. There are usually rules and technical support for re-merging different branches into the original master branch.</li>
+<li>People at large geographical distances, at separate times, can work on the same code or contribute different files of code to the same project.</li>
+    <li>Communication tends to be written and posted to public sites instead of shared informally by word of mouth, which provides a history of the project as well as learning opportunities for new project members.</li>
+    <li>Writing unit tests becomes a key programming task. a “unit test” is a small test that checks for a particular, isolated behavior such as rejecting incorrect input or taking the proper branch under certain conditions. In open source and inner source, testing is done constantly as changes are checked in, to protect against failures during production runs.</li>
+          </ul>
+          </p>
+
+<p>"InnerSource differs from classic open source by remaining within the view and control of a single organization. The “openness” of the project extends across many teams within the organization. This allows the organization to embed differentiating trade secrets into the code without fear that they will be revealed to outsiders, while benefitting from the creativity and diverse perspectives contributed by people throughout the organization. Often, the organization chooses to share parts of an InnerSource project with the public, effectively turning them into open source. When the technologies and management practices of open source are used internally, moving the project into a public arena becomes much easier."</p>
+    <p>Oram, A. (2015) Getting Started With InnerSource. San Francisco:  O’Reilly Media. Get your free copy at <a href="http://www.oreilly.com/programming/free/getting-started-with-innersource.csp">http://www.oreilly.com/programming/free/getting-started-with-innersource.csp</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/paypal">paypal</a></p>
