changes to gettingstarted and discussion

--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -35,11 +35,38 @@
         <a href="http://www.oreilly.com/programming/free/getting-started-with-innersource.csp"><img src="img/gettingstarted.gif"/></a><br/>
         
         <h3>Description</h3>
-    <div><p>Welcome to InnerSource, the powerful movement for developing open source software within the walls of a single organization, where the "openness" of a project extends across teams inside the company. In this report, O&#8217;Reilly editor and author Andy Oram takes you inside InnerSource, first by reviewing the principles that make open source development successful, and then by describing how InnerSource has worked at PayPal, the leading Internet commerce facilitator.</p><p>PayPal&#8217;s path to InnerSource involved a series of large-scale corporate decisions that included a conscious shift in tools and corporate culture. Through InnerSource, the company not only achieved faster development and better quality, but also created an environment of cross-team cooperation that encouraged programmers to contribute to any of PayPal&#8217;s development projects.</p><p>You&#8217;ll learn specific advantages of the InnerSource strategy, including:</p><ul><li><b>Faster development:</b> Programmers use unit tests, code coverage, and continuous integration to remove bugs at early stages</li><li><b>Complete documentation:</b> Code is documented better, both in-code comments and less formally on discussion lists</li><li><b>Code reuse:</b> Programmers across the organization understand the code and architecture of modules developed by other teams</li><li><b>Cross-team collaboration:</b> Contributions by members outside of the team are frictionless and rarely have to be rewritten</li><li><b>Development with GitHub:</b> GitHub maintains private repositories for in-house projects as well as public repositories for open source code</li></ul><p>Andy Oram is an editor at O&#8217;Reilly Media. An employee of the company since 1992, Andy currently specializes in programming and health IT. His work for O&#8217;Reilly includes the first books on Linux published commercially in the United States.</p></div>                                       
-  </div>
-
-      </section>
-      
+        <div>
+          <p>
+            Welcome to InnerSource, the powerful movement for developing open source software within the walls of a single organization, where the "openness" of a project extends across teams inside the company. In this report, O&#8217;Reilly editor and author Andy Oram takes you inside InnerSource, first by reviewing the principles that make open source development successful, and then by describing how InnerSource has worked at PayPal, the leading Internet commerce facilitator.
+          </p>
+          <p>
+            PayPal&#8217;s path to InnerSource involved a series of large-scale corporate decisions that included a conscious shift in tools and corporate culture. Through InnerSource, the company not only achieved faster development and better quality, but also created an environment of cross-team cooperation that encouraged programmers to contribute to any of PayPal&#8217;s development projects.
+          </p>
+          <p>
+            You&#8217;ll learn specific advantages of the InnerSource strategy, including:
+          </p>
+          <ul>
+            <li>
+              <b>Faster development:</b> Programmers use unit tests, code coverage, and continuous integration to remove bugs at early stages
+            </li>
+            <li>
+              <b>Complete documentation:</b> Code is documented better, both in-code comments and less formally on discussion lists
+            </li>
+            <li>
+              <b>Code reuse:</b> Programmers across the organization understand the code and architecture of modules developed by other teams
+            </li>
+            <li>
+              <b>Cross-team collaboration:</b> Contributions by members outside of the team are frictionless and rarely have to be rewritten
+            </li>
+            <li>
+              <b>Development with GitHub:</b> GitHub maintains private repositories for in-house projects as well as public repositories for open source code
+            </li>
+          </ul>
+          <p>
+            Andy Oram is an editor at O&#8217;Reilly Media. An employee of the company since 1992, Andy currently specializes in programming and health IT. His work for O&#8217;Reilly includes the first books on Linux published commercially in the United States.
+          </p>
+        </div>  
+      </section>                                    
       <footer>
         <p>This project is maintained by <a href="https://github.com/paypal">paypal</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
