--- a/discussion.html
+++ b/discussion.html
@@ -32,15 +32,17 @@
           <p>
                 <ul>
                     <li>
-                      <a href="http://webchat.freenode.net/?channels=%23InnerSource">Join Us On #freenode</a><div class="box">
-                      <iframe src="http://webchat.freenode.net/?channels=%23InnerSource" width="70%" height="400"></iframe></div><br/></li>
-                    <li>Quora</li>
+                      <a href="http://webchat.freenode.net/?channels=%23InnerSource">Join Us On #freenode</a>
+                    </li>
                     <li>
-                      <a href="http://www.inner-sourcing.com/wiki/wiki/">Wiki</a><div class="box"><iframe src="http://www.inner-sourcing.com/wiki/wiki/" width = "70%" height = "400"></iframe></div> <br/>
+                      <a href="http://www.quora.com/InnerSource">Quora</a>
+                    </li>
+                    <li>
+                      <a href="http://www.inner-sourcing.com/wiki/wiki/">Wiki</a>
                     </li>
                     <li>
                       <a href="#">InnerSource at PayPal</a><br/>
-                      <object width="70%" height="400" data="AntiSilo-OSCON-US-2015.pdf"></object>
+                      <object width="100%" height="340" data="resources/AntiSilo-OSCON-US-2015.pdf"></object>
                     </li>
                 </ul>
           </p>
