changes to gettingstarted and discussion

--- a/discussion.html
+++ b/discussion.html
@@ -41,7 +41,7 @@
                       <a href="http://www.inner-sourcing.com/wiki/wiki/">Wiki</a>
                     </li>
                     <li>
-                      <a href="#">InnerSource at PayPal</a><br/>
+                      <a href="resources/AntiSilo-OSCON-US-2015.pdf">InnerSource at PayPal</a><br/>
                       <object width="100%" height="340" data="resources/AntiSilo-OSCON-US-2015.pdf"></object>
                     </li>
                 </ul>
