Testing non-slide-out nav links

--- a/observations.html
+++ b/observations.html
@@ -30,7 +30,7 @@
       </header>
       <section>
         <p>
-            This Is Placeholder Text
+            InnerSource isn't an invention. It's a pattern that's been emerging. The rise of GitHub Enterprise has meant that more and more companies are choosing to migrate their existing silo’d codebases over to Enterprise GitHub instances in order to promote better availability across silos.  But the forces that created silo’d culture don’t automatically shift with a new home for the code.
         </p>
       </section>
       <footer>
