Trying strong links

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 
         <ul>
-          <li><a href="gettingstarted.html">Getting Started</a></li>
-          <li><a href="discussion.html">Join The Discussion</a></li>
-          <li><a href="contribute.html">Contribute</a></li>
+          <li><a href="gettingstarted.html"><strong>Getting Started</strong></a></li>
+          <li><a href="discussion.html"><strong>Join The Discussion</strong></a></li>
+          <li><a href="contribute.html"><strong>Contribute</strong></a></li>
         </ul>
       </header>
       <section>
