Tweaking header files and content.

--- a/contribute.html
+++ b/contribute.html
@@ -16,22 +16,23 @@
     <div class="wrapper">
       <header>
         <p align="center">
-            <img align="center" src="img/InnerSourceLogo.svg"></img>
+            <a href="index.html"><img align="center" src="img/InnerSourceLogo.svg"></img></a>
         </p>
-        <h1>InnerSource Commons</h1>
+        <h1>InnerSource&nbsp;Commons</h1>
         <p>The Journey Is The Reward</p>
 
-        <p class="view"><a href="https://github.com/paypal/InnerSourceCommons">View the Project on GitHub</a></p>
-
-
         <ul>
-          <li><a href="https://github.com/paypal/InnerSourceCommons">View On <strong>GitHub</strong></a></li>
+          <li><a href="gettingstarted.html"><strong>Getting Started</strong></a></li>
+          <li><a href="discussion.html">Join The <strong>Discussion</strong></a></li>
+          <li><a href="contribute.html"><strong>Contribute</strong></a></li>
         </ul>
       </header>
       <section>
           <p>
               If you've got a story about how InnerSource has worked inside your own company, we'd love to hear from you. Because we are hosting InnerSource Commons on using GitHub Pages, you can <a href="https://github.com/paypal/InnerSourceCommons/tree/gh-pages">submit a Pull Request to these pages</a> that adds your Case Study to the collection.
           </p>
+          
+          <p><strong>InnerSource At PayPal</strong>strong> - There is a great case study in the free <a href="gettingstarted.html">Getting Started With InnerSource</a> eBook. You can also <a href="resources/AntiSilo-OSCON-US-2015.pdf">view the slides</a>a> from Cedric Williams' OSCON 2015 talk.</p>
 
       </section>
       <footer>
