--- a/discussion.html
+++ b/discussion.html
@@ -16,16 +16,15 @@
     <div class="wrapper">
       <header>
         <p align="center">
-            <img align="center" src="img/InnerSourceLogo.svg"></img>
+            <a href="index.html"><img align="center" src="img/InnerSourceLogo.svg"></img></a>
         </p>
-        <h1>InnerSource Commons</h1>
+        <h1>InnerSource&nbsp;Commons</h1>
         <p>The Journey Is The Reward</p>
 
-        <p class="view"><a href="https://github.com/paypal/InnerSourceCommons">View the Project on GitHub</a></p>
-
-
         <ul>
-          <li><a href="https://github.com/paypal/InnerSourceCommons">View On <strong>GitHub</strong></a></li>
+          <li><a href="gettingstarted.html"><strong>Getting Started</strong></a></li>
+          <li><a href="discussion.html">Join The <strong>Discussion</strong></a></li>
+          <li><a href="contribute.html"><strong>Contribute</strong></a></li>
         </ul>
       </header>
       <section>
@@ -39,10 +38,6 @@
                     </li>
                     <li>
                       <a href="http://www.inner-sourcing.com/wiki/wiki/">Wiki</a>
-                    </li>
-                    <li>
-                      <a href="resources/AntiSilo-OSCON-US-2015.pdf">InnerSource at PayPal</a><br/>
-                      <object width="100%" height="340" data="resources/AntiSilo-OSCON-US-2015.pdf"></object>
                     </li>
                 </ul>
           </p>
