--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -16,16 +16,15 @@
     <div class="wrapper">
       <header>
         <p align="center">
-            <img align="center" src="img/InnerSourceLogo.svg"></img>
+            <a href="index.html"><img align="center" src="img/InnerSourceLogo.svg"></img></a>
         </p>
-        <h1>InnerSource Commons</h1>
+        <h1>InnerSource&nbsp;Commons</h1>
         <p>The Journey Is The Reward</p>
 
-        <p class="view"><a href="https://github.com/paypal/InnerSourceCommons">View the Project on GitHub</a></p>
-
-
         <ul>
-          <li><a href="https://github.com/paypal/InnerSourceCommons">View On <strong>GitHub</strong></a></li>
+          <li><a href="gettingstarted.html"><strong>Getting Started</strong></a></li>
+          <li><a href="discussion.html">Join The <strong>Discussion</strong></a></li>
+          <li><a href="contribute.html"><strong>Contribute</strong></a></li>
         </ul>
       </header>
       <section>
