--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
     <div class="wrapper">
       <header>
         <p align="center">
-            <img align="center" src="img/InnerSourceLogo.svg"></img>
+            <a href="index.html"><img align="center" src="img/InnerSourceLogo.svg"></img></a>
         </p>
-        <h1>InnerSource Commons</h1>
+        <h1>InnerSource&nbsp;Commons</h1>
         <p>The Journey Is The Reward</p>
-
-        <p class="view"><a href="https://github.com/paypal/InnerSourceCommons">View the Project on GitHub</a></p>
-
 
         <ul>
           <li><a href="gettingstarted.html"><strong>Getting Started</strong></a></li>
-          <li><a href="discussion.html"><strong>Join The Discussion</strong></a></li>
+          <li><a href="discussion.html">Join The <strong>Discussion</strong></a></li>
           <li><a href="contribute.html"><strong>Contribute</strong></a></li>
         </ul>
       </header>
@@ -35,6 +32,7 @@
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/paypal">paypal</a></p>
+        <p class="view"><a href="https://github.com/paypal/InnerSourceCommons">View it on GitHub</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
