Continue to tweak the buttons

--- a/contribute.html
+++ b/contribute.html
@@ -18,12 +18,12 @@
         <p align="center">
             <a href="index.html"><img align="center" src="img/InnerSourceLogo.svg"></img></a>
         </p>
-        <h1>InnerSource&nbsp;Commons</h1>
+        <h1>InnerSource</h1>
         <p>The Journey Is The Reward</p>
 
         <ul>
-          <li><a href="gettingstarted.html"><strong>Getting Started</strong></a></li>
-          <li><a href="discussion.html">Join The <strong>Discussion</strong></a></li>
+          <li><a href="gettingstarted.html"><strong>Get Started</strong></a></li>
+          <li><a href="discussion.html"><strong>Discuss</strong></a></li>
           <li><a href="contribute.html"><strong>Contribute</strong></a></li>
         </ul>
       </header>
