--- a/contribute.html
+++ b/contribute.html
@@ -32,7 +32,7 @@
               If you've got a story about how InnerSource has worked inside your own company, we'd love to hear from you. Because we are hosting InnerSource Commons on using GitHub Pages, you can <a href="https://github.com/paypal/InnerSourceCommons/tree/gh-pages">submit a Pull Request to these pages</a> that adds your Case Study to the collection.
           </p>
           
-          <p><strong>InnerSource At PayPal</strong>strong> - There is a great case study in the free <a href="gettingstarted.html">Getting Started With InnerSource</a> eBook. You can also <a href="resources/AntiSilo-OSCON-US-2015.pdf">view the slides</a>a> from Cedric Williams' OSCON 2015 talk.</p>
+          <p><strong>InnerSource At PayPal</strong> - There is a great case study in the free <a href="gettingstarted.html">Getting Started With InnerSource</a> eBook. You can also <a href="resources/AntiSilo-OSCON-US-2015.pdf">view the slides</a> from Cedric Williams' OSCON 2015 talk.</p>
 
       </section>
       <footer>
