--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <p align="center">
-            <a href="index.html"><img align="center" src="img/InnerSourceLogo.svg"></img></a>
+            <a href="index.html"><img align="center" src="img/InnerSourceLogo.png"></img></a>
         </p>
         <h1>InnerSource</h1>
         <p>The Journey Is The Reward</p>
