Removing wiki, adding questions email address.

--- a/discussion.html
+++ b/discussion.html
@@ -28,6 +28,7 @@
         </ul>
       </header>
       <section>
+          <p>Do you have questions? Ideas? Thoughts? Your own experiences? Then let's share!</p>
           <p>
                 <ul>
                     <li>
@@ -37,7 +38,7 @@
                       <a href="http://www.quora.com/InnerSource">Quora</a>
                     </li>
                     <li>
-                      <a href="http://www.inner-sourcing.com/wiki/wiki/">Wiki</a>
+                      <a href="mailto:questions@innersourcecommons.org">questions@innersourcecommons.org</a>
                     </li>
                 </ul>
           </p>
