Add Chatham House Rule language

--- a/summitSpring2016.html
+++ b/summitSpring2016.html
@@ -42,6 +42,8 @@
               <li>Next steps to continue developing the community</li>
           </ul>
 
+          <p>InnerSource Commons meetings run under the <a href="https://en.wikipedia.org/wiki/Chatham_House_Rule">Chatham House Rule</a>: information discusssed at a meeting can be shared but not attributed.</p>
+
           <p><strong>Are you working to implement InnerSource in your organization?</strong></p>
 
           <p>Each of our journeys is unique. Please consider sharing a short (20-30 minute) case study at the Summit. We would love to hear about your experience bringing InnerSource practices to your organization, particularly what your current objectives are, what experiments you are running, what you have learned so far (from successful or failed experiments), what culture changes you are trying to create, and challenges you haven't yet solved.</p>
