Update contact info for slack - fixes #1

--- a/discussion.html
+++ b/discussion.html
@@ -32,10 +32,7 @@
           <p>
                 <ul>
                     <li>
-                      <a href="http://webchat.freenode.net/?channels=%23InnerSource">Join Us On #freenode</a>
-                    </li>
-                    <li>
-                      <a href="http://www.quora.com/InnerSource">Quora</a>
+                      <a href="https://isc-inviter.herokuapp.com/">Join Us On <img src="https://isc-inviter.herokuapp.com/badge.svg" alt="slack"></a>
                     </li>
                     <li>
                       <a href="mailto:questions@innersourcecommons.org">questions@innersourcecommons.org</a>
