--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <p align="center">
-            <a href="index.html"><img align="center" src="img/InnerSourceLogo.png"></img></a>
+            <a href="index.html"><img align="center" src="img/InnerSourceLogo.png" /></a>
         </p>
         <h1>InnerSource</h1>
         <p>The Journey Is The Reward</p>
@@ -26,6 +26,8 @@
           <li><a href="discussion.html"><strong>Discuss</strong></a></li>
           <li><a href="contribute.html"><strong>Contribute</strong></a></li>
         </ul>
+
+        <a href="https://isc-inviter.herokuapp.com/"><img src="https://isc-inviter.herokuapp.com/badge.svg" /></a>
       </header>
       <section>
         <h3>Please join us at the next <a href="summitSpring2016.html">InnerSource Summit</a></h3>
