--- a/events/isc-spring-2016/index.html
+++ b/events/isc-spring-2016/index.html
@@ -278,22 +278,45 @@
 
 <p>Less is understood about how to effectively use Open Source principles on internal development. This is the challenge that InnerSource seeks to address.</p>
 
-<p>The next InnerSource Summit will be in London, England on April 21 and 22, 2016. We will announce venue information with registration. Expected sessions so far include:</p>
+<h3 id="location">Location</h3>
 
-<ul>
-  <li>Additional work on identifying patterns in the InnerSource efforts of different companies</li>
-  <li>Progress of current experiments</li>
-  <li>How to get started with InnerSource at your organization</li>
-  <li>Next steps to continue developing the community</li>
-</ul>
+<p>We will be meeting at <a href="https://skillsmatter.com/event-space">Code Node</a> at <a href="https://maps.google.com/maps?q=Skills%20Matter%20%7C%20CodeNode,%2010%20South%20Place,%20London,%20EC2M%207EB,%20GB">10 South Place, London, EC2 7EB</a> for both days.</p>
+
+<h4 id="wednesday-april-20">Wednesday April 20</h4>
+
+<pre>
+Open dinner opportunity
+</pre>
+
+<h4 id="thursday-april-21---mapping-the-landscape">Thursday April 21 - Mapping the Landscape</h4>
+
+<pre>
+08:00 Registration and coffee
+09:00 Opening
+10:00 Working sessions (unconference style)
+12:00 Lunch
+13:30 Working sessions
+16:30 Closing remarks
+
+20:00 Dinner
+</pre>
+
+<h4 id="friday-april-22---sharing-our-stories">Friday April 22 - Sharing our Stories</h4>
+
+<pre>
+08:00 Registration and coffee
+09:00 Opening
+10:00 Presentations
+12:00 Lunch
+13:30 Presentations
+16:30 Closing remarks
+</pre>
 
 <p>InnerSource Commons meetings run under the <a href="https://en.wikipedia.org/wiki/Chatham_House_Rule">Chatham House Rule</a>: information discusssed at a meeting can be shared but not attributed.</p>
 
 <h3 id="are-you-working-to-implement-innersource-in-your-organization">Are you working to implement InnerSource in your organization?</h3>
 
 <p>Each of our journeys is unique. Please consider sharing a short (10 minute) case study at the Summit. We would love to hear about your experience bringing InnerSource practices to your organization, particularly what your current objectives are, what experiments you are running, what you have learned so far (from successful or failed experiments), what culture changes you are trying to create, and challenges you haven’t yet solved.</p>
-
-<p>If you are interested in joining the conversation at the Summit please <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#115;&#117;&#109;&#109;&#105;&#116;&#064;&#105;&#110;&#110;&#101;&#114;&#115;&#111;&#117;&#114;&#099;&#101;&#099;&#111;&#109;&#109;&#111;&#110;&#115;&#046;&#111;&#114;&#103;">Email Us</a>. We will do our best to accommodate everyone while we also try to keep the event small enough to enable every voice to be heard</p>
 
 <p>Looking forward to seeing you there!</p>
 
@@ -302,6 +325,11 @@
   <li>Cedric Williams</li>
   <li>and the whole InnerSource community</li>
 </ul>
+
+<h3 id="hosts">Hosts</h3>
+
+<p><a href="http://www.techatbloomberg.com/"><img src="/InnerSourceCommons/assets/img/bloomberg.jpg" alt="Tech At Bloomberg" /></a> <a href="https://paypal.github.io"><img src="/InnerSourceCommons/assets/img/paypal.png" alt="PayPal InnerSource" /></a></p>
+
 
 			</div>
 
