Jekyll build 1 26-June-2016

--- a/events/isc-fall-2016/index.html
+++ b/events/isc-fall-2016/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Search</title>
+	<title>InnerSource Commons Summit</title>
 	<link rel="stylesheet" type="text/css" href="/InnerSourceCommons/assets/css/styles_feeling_responsive.css">
 	<script src="/InnerSourceCommons/assets/js/modernizr.min.js"></script>
 
@@ -31,9 +31,9 @@
 
 
 	<!-- Facebook Open Graph -->
-	<meta property="og:title" content="Search">
+	<meta property="og:title" content="InnerSource Commons Summit">
 	<meta property="og:description" content="InnerSource applies the lessons of Open Source to all software engineering, using collaboration and transparency to increase quality, speed, and developer joy">
-	<meta property="og:url" content="/InnerSourceCommons/search/">
+	<meta property="og:url" content="/InnerSourceCommons/events/isc-fall-2016/">
 	<meta property="og:locale" content="en_EN">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="InnerSource Commons">
@@ -46,7 +46,7 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="PayPalFLOW">
 	<meta name="twitter:creator" content="PayPalFLOW">
-	<meta name="twitter:title" content="Search">
+	<meta name="twitter:title" content="InnerSource Commons Summit">
 	<meta name="twitter:description" content="InnerSource applies the lessons of Open Source to all software engineering, using collaboration and transparency to increase quality, speed, and developer joy">
 	
 	
@@ -299,7 +299,7 @@
 
 				<div itemprop="name">
 					
-					<h1>Search</h1>
+					<h1>InnerSource Commons Summit</h1>
 				</div>
 			</header>
 
@@ -307,22 +307,17 @@
 			
 
 			<div itemprop="articleSection">
-			
-<script language="Javascript" type="text/javascript">
-	function google_search() {
-		var query = document.getElementById("google-search").value;
-		window.open("https://www.google.com/search?q=" + query + "+site:" + "%2FInnerSourceCommons%2F");
-	}
-</script>
+			<h3 id="september-28-30-in-boston-usa">September 28-30 in Boston, USA</h3>
 
-<form id="search" onsubmit="google_search(); return false;">
-	<input type="text" id="google-search" placeholder="Enter search term and hit enter" />
-</form>
-<noscript>
-	Search <a href="https://www.google.com/search?q=site:%2FInnerSourceCommons%2F" target="_blank">Google</a> for:
-	<pre><code>search-term site:/InnerSourceCommons/</code></pre>
-</noscript>
+<p>Join us for the next InnerSource Commons Summit in Boston, USA.</p>
 
+<h3 id="venue">Venue</h3>
+
+<p>This Summit will be hosted by Autodesk at their facility.</p>
+
+<p>InnerSource Commons meetings run under the <a href="https://en.wikipedia.org/wiki/Chatham_House_Rule">Chatham House Rule</a>: information discussed at a meeting can be shared but not attributed.</p>
+
+<p>Interested in helping out? Email <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#115;&#117;&#109;&#109;&#105;&#116;&#064;&#105;&#110;&#110;&#101;&#114;&#115;&#111;&#117;&#114;&#099;&#101;&#099;&#111;&#109;&#109;&#111;&#110;&#115;&#046;&#111;&#114;&#103;">&#115;&#117;&#109;&#109;&#105;&#116;&#064;&#105;&#110;&#110;&#101;&#114;&#115;&#111;&#117;&#114;&#099;&#101;&#099;&#111;&#109;&#109;&#111;&#110;&#115;&#046;&#111;&#114;&#103;</a> or speak up on <a href="https://isc-inviter.herokuapp.com/">#innersourcecommons</a>!</p>
 
 			</div>
 
