Jekyll build 1 22 Aug 2016

--- a/events/oscon-us-2016/index.html
+++ b/events/oscon-us-2016/index.html
@@ -344,7 +344,7 @@
 	<div class="panel radius">
 		<h3><a href="/InnerSourceCommons/events/isc-fall-2016/">ISC Summit</a></h3>
 		<p>
-		  Please join us at the next InnerSource Commons Summit! We will be meeting September 28-30 in Boston, USA.
+		  Please join us at the next <a href="/InnerSourceCommons/events/isc-fall-2016/">InnerSource Commons Summit</a>! We will be meeting September 28-30 in Boston, USA. Signup <a href="https://www.eventbrite.com/e/innersource-commons-summit-fall-2016-tickets-26666521283">here</a>.
 		</p>
 	</div>
 
