Jekyll build 1 26 Aug 2016

--- a/events/conduct/index.html
+++ b/events/conduct/index.html
@@ -359,7 +359,13 @@
 		  Please join us at the next <a href="/InnerSourceCommons/events/isc-fall-2016/">InnerSource Commons Summit</a>! We will be meeting September 28-30 in Boston, USA. Signup <a href="https://www.eventbrite.com/e/innersource-commons-summit-fall-2016-tickets-26666521283">here</a>.
 		</p>
 	</div>
-
+	<div class="panel radius">
+	  <h3><a href="https://docs.google.com/forms/d/e/1FAIpQLSf1EBbeyYezb_j1U2x1K2YqrDTN7UPZYnYAkre2h5QceI0I4A/viewform">InnerSource Survey</a></h3>
+	  <p>
+	    Many organizations care about InnerSource - some are already deeply involved, some just considering starting. Take the first annual <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1EBbeyYezb_j1U2x1K2YqrDTN7UPZYnYAkre2h5QceI0I4A/viewform">InnerSource Survey</a> - we'll use this anonymous data to look for patterns in the community at the <a href="/InnerSourceCommons/events/isc-fall-2016/">Summit</a>. We'll publish the results here and will use them to help guide the development of shared tools over the next year.
+	  </p>
+	</div>
+	
   <div class="border-dotted radius b30">
     <p class="text-left">
       Connect with the community
