--- a/events/isc-fall-2016/index.html
+++ b/events/isc-fall-2016/index.html
@@ -335,6 +335,10 @@
 
 <p>If you have any questions on registration please let us know!</p>
 
+<h3 id="survey">Survey</h3>
+
+<p>Please take the first-ever <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1EBbeyYezb_j1U2x1K2YqrDTN7UPZYnYAkre2h5QceI0I4A/viewform">State of InnerSource Survey</a>. This data will be used at the Summit to search for patterns in the community and will be posted on the <a href="http://innersourcecommons.org">Commons</a> afterwards.</p>
+
 <h3 id="agenda">Agenda</h3>
 
 <p>This Summit we are starting to break down the stages of an InnerSource journey and aligning the discussions with them. Each session will include time for discussions. Classes will be both experiential and “train the trainer” so that you can use these in your own organization. <em>Some</em> of the sessions we are expecting:</p>
@@ -382,7 +386,7 @@
   </tbody>
 </table>
 
-<p>If you have specific sessions you would like to lead or participate in, please contact us via <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#115;&#117;&#109;&#109;&#105;&#116;&#064;&#105;&#110;&#110;&#101;&#114;&#115;&#111;&#117;&#114;&#099;&#101;&#099;&#111;&#109;&#109;&#111;&#110;&#115;&#046;&#111;&#114;&#103;">&#115;&#117;&#109;&#109;&#105;&#116;&#064;&#105;&#110;&#110;&#101;&#114;&#115;&#111;&#117;&#114;&#099;&#101;&#099;&#111;&#109;&#109;&#111;&#110;&#115;&#046;&#111;&#114;&#103;</a> or mention it in the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeirf-zgX2-fwQPegVDTO7N3z3MuC97Dj8CENQysPnVDsVcTg/viewform">survey</a>.</p>
+<p>If you have specific sessions you would like to lead or participate in, please contact us via <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#115;&#117;&#109;&#109;&#105;&#116;&#064;&#105;&#110;&#110;&#101;&#114;&#115;&#111;&#117;&#114;&#099;&#101;&#099;&#111;&#109;&#109;&#111;&#110;&#115;&#046;&#111;&#114;&#103;">&#115;&#117;&#109;&#109;&#105;&#116;&#064;&#105;&#110;&#110;&#101;&#114;&#115;&#111;&#117;&#114;&#099;&#101;&#099;&#111;&#109;&#109;&#111;&#110;&#115;&#046;&#111;&#114;&#103;</a> or mention it in the <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1EBbeyYezb_j1U2x1K2YqrDTN7UPZYnYAkre2h5QceI0I4A/viewform">survey</a>.</p>
 
 <h3 id="travel-and-transit">Travel and Transit</h3>
 
@@ -438,7 +442,13 @@ All family friendly activities with constantly updated exhibits</p>
 		  Please join us at the next <a href="/InnerSourceCommons/events/isc-fall-2016/">InnerSource Commons Summit</a>! We will be meeting September 28-30 in Boston, USA. Signup <a href="https://www.eventbrite.com/e/innersource-commons-summit-fall-2016-tickets-26666521283">here</a>.
 		</p>
 	</div>
-
+	<div class="panel radius">
+	  <h3><a href="https://docs.google.com/forms/d/e/1FAIpQLSf1EBbeyYezb_j1U2x1K2YqrDTN7UPZYnYAkre2h5QceI0I4A/viewform">InnerSource Survey</a></h3>
+	  <p>
+	    Many organizations care about InnerSource - some are already deeply involved, some just considering starting. Take the first annual <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1EBbeyYezb_j1U2x1K2YqrDTN7UPZYnYAkre2h5QceI0I4A/viewform">InnerSource Survey</a> - we'll use this anonymous data to look for patterns in the community at the <a href="/InnerSourceCommons/events/isc-fall-2016/">Summit</a>. We'll publish the results here and will use them to help guide the development of shared tools over the next year.
+	  </p>
+	</div>
+	
   <div class="border-dotted radius b30">
     <p class="text-left">
       Connect with the community
