Jekyll build 1 Sep 1 2016

--- a/events/isc-fall-2016/index.html
+++ b/events/isc-fall-2016/index.html
@@ -396,6 +396,27 @@
 
 <p>Unlimited passes for subway and busses are available as well for USD 12.00/day or 21.25/week. Check <a href="http://www.mbta.com/fares_and_passes/passes/">MBTA</a> for more information.</p>
 
+<h3 id="hotels">Hotels</h3>
+
+<p>Hotels near the event:</p>
+
+<ul>
+  <li>The Envoy Hotel, Autograph Collection</li>
+  <li>Renaissance Boston Waterfront Hotel</li>
+  <li>The Westin Boston Waterfront</li>
+  <li>Aloft Boston Seaport Hotel</li>
+  <li>Elements by Westin</li>
+</ul>
+
+<p>Other hotels attendees may be staying at:</p>
+
+<ul>
+  <li>Doubltree Club by Hilton Boston Bayside</li>
+  <li>Courtyard Boston Logan Airport</li>
+  <li>Hampton Inn Boston/Cambridge</li>
+  <li>Four Points by Sheraton Boston Logan Airport</li>
+</ul>
+
 <h3 id="area-highlights">Area Highlights</h3>
 
 <p>There are many wonderful things to visit in the area. If you are traveling with family or have time to explore, here are just a few local suggestions.</p>
