Jekyll build 1 21 Oct 2016

--- a/events/isc-fall-2016/index.html
+++ b/events/isc-fall-2016/index.html
@@ -453,9 +453,9 @@ Both Boston based breweries have daily tours and tastings of their staple and se
 <p><a href="http://www.neaq.org/">New England Aquarium</a>, <a href="http://www.mos.org">Museum of Science</a>, <a href="http://www.bostonchildrensmuseum.org">Children’s Museum</a>, <a href="http://www.mfa.org">Museum of Fine Arts</a>:
 All family friendly activities with constantly updated exhibits</p>
 
-<h3 id="code-of-conducteventsconduct"><a href="/events/conduct/">Code of Conduct</a></h3>
+<h3 id="code-of-conductinnersourcecommonseventsconduct"><a href="/InnerSourceCommons/events/conduct/">Code of Conduct</a></h3>
 
-<p>All participants, vendors, and guests at InnerSource Commons events are required to abide by the <a href="/events/conduct/">code of conduct</a>.</p>
+<p>All participants, vendors, and guests at InnerSource Commons events are required to abide by the <a href="/InnerSourceCommons/events/conduct/">code of conduct</a>.</p>
 
 <p>InnerSource Commons meetings run under the <a href="https://en.wikipedia.org/wiki/Chatham_House_Rule">Chatham House Rule</a>: information discussed at a meeting can be shared but not attributed.</p>
 
