--- a/events/isc-spring-2017/index.html
+++ b/events/isc-spring-2017/index.html
@@ -345,9 +345,9 @@
 
 <p>Registration info coming soon!</p>
 
-<h3 id="code-of-conducteventsconduct"><a href="/events/conduct/">Code of Conduct</a></h3>
+<h3 id="code-of-conductinnersourcecommonseventsconduct"><a href="/InnerSourceCommons/events/conduct/">Code of Conduct</a></h3>
 
-<p>All participants, vendors, and guests at InnerSource Commons events are required to abide by the <a href="/events/conduct/">code of conduct</a>.</p>
+<p>All participants, vendors, and guests at InnerSource Commons events are required to abide by the <a href="/InnerSourceCommons/events/conduct/">code of conduct</a>.</p>
 
 <p>InnerSource Commons meetings run under the <a href="https://en.wikipedia.org/wiki/Chatham_House_Rule">Chatham House Rule</a>: information discussed at a meeting can be shared but not attributed.</p>
 
