--- a/about/index.html
+++ b/about/index.html
@@ -351,7 +351,7 @@
 </ul>
 
 <h2 id="licensing">Licensing</h2>
-<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">InnerSourceCommons.org</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="innersourcecommons.org" property="cc:attributionName" rel="cc:attributionURL">InnerSourceCommons.org</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://innersourcecommons.org" rel="dct:source">http://innersourcecommons.org</a>.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">InnerSourceCommons.org</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://innersourcecommons.org" property="cc:attributionName" rel="cc:attributionURL">InnerSourceCommons.org</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://innersourcecommons.org" rel="dct:source">http://innersourcecommons.org</a>.</p>
 
 			</div>
 
